# Face_Recognition_ESP32

./: .env.example  .gitignore  CAMERA_DINAMICA.md  FEATURES.md  HTTPS_MOBILE.md  README.md  README_USO.md  alembic.ini  app.py  face.py  init_db.py  main.py  pontos_registrados.json  pyproject.toml  rec.py  requirements.txt  save.py  test_camera.html  test_db.py
alembic/: env.py
modules/: __init__.py  camera_manager.py  face_recognition.py  ponto_manager.py
src/: app.py  setup_db.py
src/constants/: config.py  database.py
src/models/: db.py  models.py
src/services/: esp32_client.py  face_recognition_service.py  session_manager.py
src/sql/: __init__.py  database.py
src/static/js/: recognition.js  registro.js
src/static/styles/: app.css
src/templates/: dashboard.html  index.html  index_espcam.html  login.html  registro.html  registro_espcam.html  registro_usuario.html
templates/: index.html  registro.html
